--- a/assets/translations/ar-SA.json
+++ b/assets/translations/ar-SA.json
@@ -14,5 +14,8 @@
     "startups": "الشركات الناشئة",
     "prominent_service": "ابرز الخدمات",
     "distinguished_consultants": "إستشاريون مميزون",
-    "all": "الكل"
+    "all": "الكل",
+    "no_internet_connection": "لا يوجد اتصال بالإنترنت",
+    "unknown_error": "خطا غير معروف",
+    "reload": "اعد التحميل"
 }
